[package]
name = "neon-rs"
version = "0.0.1"
edition = { workspace = true }
authors = ["ShengHui <847713844@qq.com>"]
keywords = ["crypto", "hash", "redis", "redlock", "sql"]
description = "The Rust Development Toolkit"
license = "MIT"
repository = { workspace = true }

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/noble-gase/neon-rs"

[workspace.dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
tokio = "1"
anyhow = "1.0"
tracing = "0.1"
const-hex = "1.13"
aes = "0.8"
aes-gcm = "0.10"
cbc = "0.1"
des = "0.8"
block-padding = "0.3"
cipher = "0.4"
rsa = "=0.10.0-rc.18"
pkcs1 = "0.7"
pkcs8 = "0.10"
spki = "0.7"
x509-cert = "0.2"
p12 = "0.6"
digest = "0.11"
md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"
base64 = "0.22"
pem = "3"
rand = "0.10"
getrandom = "0.4"
jiff = "0.2"
time = "0.3"
serde = "1.0"
serde_json = "1.0"
uuid = "1.15"
sqlx = { version = "0.8", default-features = false }
redis = { version = "0.32", default-features = false }
r2d2 = "0.8"
bb8 = "0.9"
sea-query = { version = "=1.0.0-rc.33", default-features = false }
sea-query-sqlx = { version = "=0.8.0-rc.15", default-features = false }

[dependencies]
neon-core = { path = "crates/neon-core", version = "0.0.1", default-features = false }
neon-crypto = { path = "crates/neon-crypto", version = "0.0.1", optional = true, default-features = false }
neon-macro = { path = "crates/neon-macros", version = "0.0.1", optional = true, default-features = false }
neon-redis = { path = "crates/neon-redis", version = "0.0.1", optional = true, default-features = false }
neon-sql = { path = "crates/neon-sql", version = "0.0.1", optional = true, default-features = false }

[features]
default = []

helper = ["neon-core/helper"]
zoned = ["neon-core/zoned"]

crypto = [
    "dep:neon-crypto",
    "neon-crypto/hash",
    "neon-crypto/aes",
    "neon-crypto/des",
    "neon-crypto/rsa",
]
crypto-hash = ["dep:neon-crypto", "neon-crypto/hash"]
crypto-aes = ["dep:neon-crypto", "neon-crypto/aes"]
crypto-des = ["dep:neon-crypto", "neon-crypto/des"]
crypto-rsa = ["dep:neon-crypto", "neon-crypto/rsa"]

macros = ["dep:neon-macro"]

redis = ["dep:neon-redis"]
redis-cluster = ["dep:neon-redis", "neon-redis/cluster"]
redis-sync-lock = ["dep:neon-redis", "neon-redis/sync-lock"]

sql = ["dep:neon-sql", "neon-sql/mysql", "neon-sql/postgres", "neon-sql/sqlite"]
sql-mysql = ["dep:neon-sql", "neon-sql/mysql"]
sql-postgres = ["dep:neon-sql", "neon-sql/postgres"]
sql-sqlite = ["dep:neon-sql", "neon-sql/sqlite"]
