[package]
name = "neon-rs"
version = "0.2.2"
edition = { workspace = true }
authors = ["ShengHui <847713844@qq.com>"]
keywords = ["crypto", "hash", "redis", "redlock", "sql"]
description = "The Rust Development Toolkit"
license = "MIT"
repository = { workspace = true }

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.94"
repository = "https://github.com/noble-gase/neon-rs"

[workspace.dependencies]
neon-core = { path = "crates/neon-core", version = "0" }

# proc-macro
syn = "2"
quote = "1"
proc-macro2 = "1"

# common
tokio = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = "1"
serde_json = "1"
jiff = "0.2"
time = "0.3"
uuid = "1"
rand = "0.10"
getrandom = "0.4"
const-hex = "1"
base64 = "0.22"
pem = "3"
reqwest = { version = "0.13", default-features = false }
libflate = "2.3"
form_urlencoded = "1"

# crypto
aes = "0.9"
aes-gcm = "0.11.0-rc.4"
cbc = "0.2"
des = "0.9"
block-padding = "0.4"
cipher = "0.5"
rsa = "0.10.0-rc.18"
pkcs1 = "0.8.0-rc.4"
pkcs8 = "0.11"
spki = "0.8"
x509-cert = "0.3.0-rc.4"
p12 = "0.6"
digest = "0.11"
md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"

# sql
sqlx = { version = "0.9", default-features = false }
sea-query = { version = "1", default-features = false }
sea-query-sqlx = { version = "0.9", default-features = false }

# redis
redis = { version = "1", default-features = false }
r2d2 = "0.8"

# config
config = "0.15"
nacos-sdk = { version = "0.8", default-features = false }

# log
aliyun-log-rust-sdk = "0.3"
aliyun-log-sdk-protobuf = "0.1"
arc-swap = "1"
crossbeam-queue = "0.3"

[dependencies]
neon-core = { path = "crates/neon-core", version = "0", default-features = false }
neon-config = { path = "crates/neon-config", version = "0", optional = true, default-features = false }
neon-crypto = { path = "crates/neon-crypto", version = "0", optional = true, default-features = false }
neon-helper = { path = "crates/neon-helper", version = "0", optional = true, default-features = false }
neon-log = { path = "crates/neon-log", version = "0", optional = true, default-features = false }
neon-macro = { path = "crates/neon-macros", version = "0", optional = true, default-features = false }
neon-redis = { path = "crates/neon-redis", version = "0", optional = true, default-features = false }
neon-sql = { path = "crates/neon-sql", version = "0", optional = true, default-features = false }


[features]
default = []

config = ["dep:neon-config", "neon-config/nacos"]
config-nacos = ["dep:neon-config", "neon-config/nacos"]

crypto = [
    "dep:neon-crypto",
    "neon-crypto/hash",
    "neon-crypto/aes",
    "neon-crypto/des",
    "neon-crypto/rsa",
]
crypto-hash = ["dep:neon-crypto", "neon-crypto/hash"]
crypto-aes = ["dep:neon-crypto", "neon-crypto/aes"]
crypto-des = ["dep:neon-crypto", "neon-crypto/des"]
crypto-rsa = ["dep:neon-crypto", "neon-crypto/rsa"]

helper = ["dep:neon-helper"]

log = ["dep:neon-log", "neon-log/sls"]
log-sls = ["dep:neon-log", "neon-log/sls"]

macros = ["dep:neon-macro"]

redis = ["dep:neon-redis"]
redis-cluster = ["dep:neon-redis", "neon-redis/cluster"]
redis-sync-lock = ["dep:neon-redis", "neon-redis/sync-lock"]
redis-tls-rustls = ["dep:neon-redis", "neon-redis/tls-rustls"]
redis-tls-rustls-insecure = ["dep:neon-redis", "neon-redis/tls-rustls-insecure"]
redis-tls-native-tls = ["dep:neon-redis", "neon-redis/tls-native-tls"]

sql = ["dep:neon-sql", "neon-sql/mysql", "neon-sql/postgres", "neon-sql/sqlite"]
sql-mysql = ["dep:neon-sql", "neon-sql/mysql"]
sql-postgres = ["dep:neon-sql", "neon-sql/postgres"]
sql-sqlite = ["dep:neon-sql", "neon-sql/sqlite"]
