[package]
name = "kr-macros"
version = "0.1.0"
edition = { workspace = true }
description = "macros toolkit"
license = "MIT"

[lib]
name = "kr_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
