[package]
name = "kr-redis"
version = "0.1.0"
edition = { workspace = true }
description = "redis toolkit"
license = "MIT"

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
r2d2 = { workspace = true }
bb8 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
redis = { workspace = true, features = [
    "r2d2",
    "cluster",
    "cluster-async",
    "tokio-comp",
] }
