[package]
name = "neon-helper"
version = "0.2.0"
edition = { workspace = true }
description = "helper toolkit"
license = "MIT"
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
jiff = { workspace = true }
time = { workspace = true }
getrandom = { workspace = true }
const-hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls"] }
libflate = { workspace = true }
form_urlencoded = { workspace = true }
