[package]
name = "ners-macros"
version = "0.0.1"
edition = { workspace = true }
description = "macros toolkit"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["derive", "parsing", "printing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
