[package]
name = "neon-macro"
version = "0.0.1"
edition = { workspace = true }
description = "macro toolkit"
license = "MIT"
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["derive", "parsing", "printing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
