[package]
name = "neon-macro"
version = "0.1.0"
edition = { workspace = true }
description = "macros toolkit"
license = "MIT"
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["derive", "parsing", "printing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
