[package]
name = "neon-redis"
version = "0.2.3"
edition = { workspace = true }
description = "redis toolkit"
license = "MIT"
repository = { workspace = true }

[dependencies]
neon-core = { workspace = true }

tokio = { workspace = true, features = ["rt", "time"] }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
r2d2 = { workspace = true, optional = true }
redis = { workspace = true, features = [
    "tokio-comp",
    "script",
    "connection-manager",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[features]
default = []
cluster = ["redis/cluster", "redis/cluster-async"]
sync-lock = ["dep:r2d2", "redis/r2d2"]
tls-rustls = ["redis/tokio-rustls-comp"]
tls-rustls-insecure = ["tls-rustls", "redis/tls-rustls-insecure"]
tls-native-tls = ["redis/tokio-native-tls-comp"]
